# bms-flux

./: .gitignore  .pre-commit-config.yaml  README.md  config.yaml  pyproject.toml
.github/workflows/: ci.yml
agent-driver/: run_full_pipeline.py
data-generator-mcp/: tools.py
data-generator-mcp/data/: battery_data.csv
eda_mcp/: README.md  dashboard.py  pyproject.toml  server.py  tools.py
feature-one-anamoly-detection-mcp/: feature-one-anamoly-detection-mcp_README.md  feature-one-anamoly-detection-mcp_pyproject.toml  feature-one-anamoly-detection-mcp_server.py  feature-one-anamoly-detection-mcp_tools.py
feature-three-failure-prediction-mcp/: README.md  server.py  tools.py
feature-two-timeseries-prediction-mcp/: README.md  server.py  tools.py
feature_one_anamoly_detection_mcp/: README.md  __init__.py  pyproject.toml  server.py  tools.py
feature_three_failure_prediction_mcp/: README.md  pyproject.toml  server.py  tools.py
feature_two_timeseries_prediction_mcp/: README.md  pyproject.toml  server.py  tools.py
live-inference/: README.md  inference_utils.py  server.py
load-preprocessdata-mcp/: load-preprocessdata-mcp_README.md  server.py  tools.py
load_preprocessdata_mcp/: README.md  load-preprocessdata-mcp_README.md  pyproject.toml  server.py  tools.py
schema/: bms_schema.py
tests/: test_anomaly_detection.py  test_failure_prediction.py  test_preprocessing.py  test_timeseries.py
utils/: model_utils.py
